dui hao de zhuang tai zhe zhi shi pan deng lu shang de yi ge yi zhan wo men tong guo Magic5 xi lie ba

--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -3,14 +3,14 @@
 
 <head>
         <link rel="canonical" href="https://sockscap64.github.io/free-nodes/" />
-    <title>免费节点 - Sockscap64免费机场节点分享官网 - 第2页</title>
+    <title>免费节点 - Sockscap64免费机场节点分享官网</title>
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="Sockscap64免费机场节点分享官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://sockscap64.github.io/free-nodes/" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
-    <meta property="og:title" content="免费节点 - Sockscap64免费机场节点分享官网 - 第2页" />
+    <meta property="og:title" content="免费节点 - Sockscap64免费机场节点分享官网" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免费节点 - Sockscap64免费机场节点分享官网 - 第2页">
+    <meta name="apple-mobile-web-app-title" content="免费节点 - Sockscap64免费机场节点分享官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -121,148 +121,50 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-17">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-23">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-17-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="8月17日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                <a href="/free-nodes/2025-8-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-17-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月17日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                <a href="/free-nodes/2025-8-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了加拿大、日本、韩国、欧洲、香港、新加坡、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了欧洲、加拿大、香港、新加坡、美国、韩国、日本等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-16">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-22">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-16-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="8月16日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                <a href="/free-nodes/2025-8-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-16-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月16日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                <a href="/free-nodes/2025-8-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了美国、加拿大、香港、日本、新加坡、欧洲、韩国等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了韩国、加拿大、美国、欧洲、新加坡、日本、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-15">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-21">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-15-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="8月15日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                <a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-15-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月15日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                <a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了加拿大、日本、美国、欧洲、新加坡、韩国、香港等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-14">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="8月14日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月14日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、新加坡、韩国、美国、香港、加拿大、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-13">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-13-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="8月13日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-13-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月13日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、新加坡、美国、韩国、香港、欧洲、加拿大等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-12">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-12-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="8月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-12-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、韩国、欧洲、加拿大、新加坡、美国、香港等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-11">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、美国、香港、日本、加拿大、新加坡、韩国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-10">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-10-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="8月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-10-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、日本、美国、香港、加拿大、新加坡、韩国等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-09">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-9-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="8月9日→20M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-9-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月9日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、日本、新加坡、香港、韩国、美国、加拿大等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-08">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-8-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="8月8日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-8-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月8日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、加拿大、美国、韩国、日本、新加坡、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了香港、日本、欧洲、美国、韩国、新加坡、加拿大等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
                         
-                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
+                                            </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -271,16 +173,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-subscribe-node.htm" title="8月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">8月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-30-node-share.htm" title="7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-node-subscribe.htm" title="7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share-links.htm" title="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-18-node-share.htm" title="7月18日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月18日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-3-free-node-subscribe-links.htm" title="8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-free-node-subscribe.htm" title="7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-24-free-node-subscribe.htm" title="7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-29-free-high-speed-nodes.htm" title="7月29日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月29日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-node-share-links.htm" title="8月8日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月8日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-137585.htm" title="从SSR到V2RayNG的完美迁移：全方位代理升级指南">从SSR到V2RayNG的完美迁移：全方位代理升级指南</a></li>
+                        <li class="py-2"><a href="/news/article-140070.htm" title="科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析">科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析</a></li>
+                        <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-146122.htm" title="解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa">解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa</a></li>
+                        <li class="py-2"><a href="/news/article-134532.htm" title="Shadowrocket终极指南：版本对比与高阶使用技巧全解析">Shadowrocket终极指南：版本对比与高阶使用技巧全解析</a></li>
+                        <li class="py-2"><a href="/news/article-143216.htm" title="突破网络封锁：V2Ray高效连接全攻略与深度解析">突破网络封锁：V2Ray高效连接全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-145028.htm" title="手机变身为代理服务器：详解v2rayNg网络共享全攻略">手机变身为代理服务器：详解v2rayNg网络共享全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
+                        <li class="py-2"><a href="/news/article-134901.htm" title="终极指南：在Lean潘多拉上高效部署V2Ray实现安全匿名访问">终极指南：在Lean潘多拉上高效部署V2Ray实现安全匿名访问</a></li>
+                        <li class="py-2"><a href="/news/article-133850.htm" title="华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解">华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +194,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
