--- a/about-us.htm
+++ b/about-us.htm
@@ -139,16 +139,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-13-free-subscribe-node.htm" title="7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-subscribe-node.htm" title="8月9日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">8月9日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share-links.htm" title="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-node-share.htm" title="7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-free-high-speed-nodes.htm" title="8月16日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">8月16日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-15-free-high-speed-nodes.htm" title="7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="7月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-free-node-subscribe.htm" title="7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-high-speed-nodes.htm" title="7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-131625.htm" title="安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界">安卓用户必备：X浏览器科学上网全攻略——解锁安全自由的网络世界</a></li>
+                        <li class="py-2"><a href="/news/article-146855.htm" title="突破网络边界：iPhone科学上网全攻略与深度解析">突破网络边界：iPhone科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-140070.htm" title="科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析">科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析</a></li>
+                        <li class="py-2"><a href="/news/article-135802.htm" title="突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南">突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-147221.htm" title="CLASH配置下载与部署全攻略：解锁网络自由的关键步骤">CLASH配置下载与部署全攻略：解锁网络自由的关键步骤</a></li>
+                        <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
+                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-140423.htm" title="Shadowrocket自动配置全攻略：从入门到精通的安全上网指南">Shadowrocket自动配置全攻略：从入门到精通的安全上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-139360.htm" title="iOS科学上网全攻略：解锁数字世界的自由之门">iOS科学上网全攻略：解锁数字世界的自由之门</a></li>
                     </ul>
     </div>
 </div>
@@ -160,7 +160,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
