--- a/client.htm
+++ b/client.htm
@@ -290,16 +290,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-19-node-share.htm" title="7月19日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">7月19日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-31-free-high-speed-nodes.htm" title="7月31日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月31日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-high-speed-nodes.htm" title="7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-node-share.htm" title="7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-node-share.htm" title="7月23日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月23日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-30-node-share.htm" title="7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="7月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-free-node-subscribe-links.htm" title="8月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-free-subscribe-node.htm" title="8月13日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">8月13日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-16-free-high-speed-nodes.htm" title="7月16日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月16日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
+                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-140781.htm" title="从零开始：谷歌云VPS上搭建V2Ray科学上网全攻略">从零开始：谷歌云VPS上搭建V2Ray科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-144303.htm" title="突破网络封锁的利器：Lantern科学上网插件全方位使用指南">突破网络封锁的利器：Lantern科学上网插件全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
+                        <li class="py-2"><a href="/news/article-133211.htm" title="突破网络边界：电脑版科学上网全攻略与官网使用指南">突破网络边界：电脑版科学上网全攻略与官网使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-133850.htm" title="华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解">华硕AC68U路由器科学上网全攻略：从固件刷写到VPN配置详解</a></li>
+                        <li class="py-2"><a href="/news/article-134206.htm" title="掌握网络自由：Clash安卓规则配置全攻略与深度实践">掌握网络自由：Clash安卓规则配置全攻略与深度实践</a></li>
+                        <li class="py-2"><a href="/news/article-139715.htm" title="突破网络边界：梅林86u路由器科学上网全攻略与深度体验">突破网络边界：梅林86u路由器科学上网全攻略与深度体验</a></li>
                     </ul>
     </div>
 </div>
@@ -311,7 +311,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
