--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -153,16 +153,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-13-free-subscribe-node.htm" title="7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-node-share.htm" title="7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-subscribe-node.htm" title="7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-node-subscribe-links.htm" title="8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-3-free-node-subscribe-links.htm" title="8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share-links.htm" title="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-node-share-links.htm" title="7月21日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">7月21日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-24-free-node-subscribe.htm" title="7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-30-node-share.htm" title="7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-high-speed-nodes.htm" title="8月14日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月14日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
+                        <li class="py-2"><a href="/news/article-139007.htm" title="突破网络边界：科学上网小工具的终极指南与深度解析">突破网络边界：科学上网小工具的终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
+                        <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-136876.htm" title="Potatso与v2ray兼容性全解析：突破网络限制的终极指南">Potatso与v2ray兼容性全解析：突破网络限制的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-146122.htm" title="解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa">解锁网络自由：全面指南教你下载与配置Shadowrocket.ipa</a></li>
+                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
                     </ul>
     </div>
 </div>
@@ -174,7 +174,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
