--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="http://cgp2-b.com/paid-subscribe/" />
+        <link rel="canonical" href="http://cgp2-c.com/paid-subscribe/" />
     <title>付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Sockscap64免费机场节点分享官网</title>
         <meta name="keywords" content="购买Clash节点推荐,Trojan机场排名,V2ray机场排名,中国国内好用的翻墙VPN推荐,购买代理机场排名,付费好用机场推荐,购买翻墙VPN排名" />
         <meta name="description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - Sockscap64免费机场节点分享官网" />
@@ -10,7 +10,7 @@
 
     <meta name="author" content="Sockscap64免费机场节点分享官网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="http://cgp2-b.com/paid-subscribe/" />
+    <meta property="og:url" content="http://cgp2-c.com/paid-subscribe/" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
     <meta property="og:title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Sockscap64免费机场节点分享官网" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
@@ -538,16 +538,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-node-subscribe.htm" title="7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-7-node-share.htm" title="7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-node-subscribe-links.htm" title="8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-19-node-share.htm" title="7月19日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">7月19日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-subscribe-node.htm" title="8月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">8月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-13-free-subscribe-node.htm" title="7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-26-node-share.htm" title="7月26日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">7月26日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-27-node-share.htm" title="7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-node-share.htm" title="7月23日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月23日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-1-free-node-subscribe.htm" title="8月1日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">8月1日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-140070.htm" title="科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析">科学上网利器之争：SS与VPN的本质差异及最佳使用场景全解析</a></li>
+                        <li class="py-2"><a href="/news/article-132328.htm" title="科学上网新选择：Shadowsocks账号使用全攻略">科学上网新选择：Shadowsocks账号使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-136161.htm" title="手把手教你安装v2ray离线包：从入门到精通的完整指南">手把手教你安装v2ray离线包：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-134901.htm" title="终极指南：在Lean潘多拉上高效部署V2Ray实现安全匿名访问">终极指南：在Lean潘多拉上高效部署V2Ray实现安全匿名访问</a></li>
+                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
+                        <li class="py-2"><a href="/news/article-145028.htm" title="手机变身为代理服务器：详解v2rayNg网络共享全攻略">手机变身为代理服务器：详解v2rayNg网络共享全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
+                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-139715.htm" title="突破网络边界：梅林86u路由器科学上网全攻略与深度体验">突破网络边界：梅林86u路由器科学上网全攻略与深度体验</a></li>
                     </ul>
     </div>
 </div>
@@ -559,7 +559,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
